--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /.idea/
+/.gradle/5.2.1/fileHashes/fileHashes.lock
+/.gradle/5.5.1/fileHashes/fileHashes.lock
+/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+/.gradle/5.2.1/fileChanges/last-build.bin
+/.gradle/5.5.1/fileChanges/last-build.bin
+/.gradle/buildOutputCleanup/cache.properties
+/.gradle/5.2.1/executionHistory/executionHistory.lock
+/.gradle/5.2.1/gc.properties
+/.gradle/vcs-1/gc.properties
+/.gradle/5.2.1/executionHistory/executionHistory.bin
+/.gradle/5.5.1/gc.properties
+/.gradle/5.2.1/fileHashes/fileHashes.bin
